--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -21,7 +21,7 @@
   }
 
   @include breakpoint($large) {
-    @include span(1.5 of 12);
+    @include span(2 of 12);
     @include prefix(0.5 of 12);
     opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
@@ -33,7 +33,7 @@
   }
 
   @include breakpoint($x-large) {
-    max-width: 200px;
+    max-width: 250px;
     padding-right: 0;
   }
 
@@ -91,7 +91,7 @@
   }
 
   img {
-    max-width: 150px;
+    max-width: 175px;
     border-radius: 50%;
 
     @include breakpoint($large) {
